// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GhostButton renders button with external link 1`] = `
<a
  class="baseButton medium ghost"
  href="http://a"
>
  <span
    class="text"
  >
    Default
  </span>
  <div
    class="rippleContainer"
  />
</a>
`;

exports[`GhostButton renders button with internal link 1`] = `
<a
  class="baseButton medium ghost"
  href="/a"
>
  <span
    class="text"
  >
    Default
  </span>
  <div
    class="rippleContainer"
  />
</a>
`;

exports[`GhostButton renders the circle 1`] = `
<button
  class="baseButton medium ghost circle"
>
  <span
    class="text"
  >
    Circle
  </span>
  <div
    class="rippleContainer"
  />
</button>
`;

exports[`GhostButton renders the default 1`] = `
<button
  class="baseButton medium ghost"
>
  <span
    class="text"
  >
    Default
  </span>
  <div
    class="rippleContainer"
  />
</button>
`;

exports[`GhostButton renders with icon 1`] = `
<button
  class="baseButton medium ghost"
>
  <i
    aria-hidden="true"
    class="iconSpan"
  >
    <svg
      height="16"
      version="1.1"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        transform="scale(1)"
      >
        src/components/icons/assets/github.svg
      </g>
    </svg>
  </i>
  <span
    class="text withIcon"
  >
    Icon
  </span>
  <div
    class="rippleContainer"
  />
</button>
`;

exports[`PrimaryButton renders button with external link 1`] = `
<a
  class="baseButton medium primary"
  href="http://a"
>
  <span
    class="text"
  >
    Default
  </span>
  <div
    class="rippleContainer"
  />
</a>
`;

exports[`PrimaryButton renders button with internal link 1`] = `
<a
  class="baseButton medium primary"
  href="/a"
>
  <span
    class="text"
  >
    Default
  </span>
  <div
    class="rippleContainer"
  />
</a>
`;

exports[`PrimaryButton renders the circle 1`] = `
<button
  class="baseButton medium primary circle"
>
  <span
    class="text"
  >
    Circle
  </span>
  <div
    class="rippleContainer"
  />
</button>
`;

exports[`PrimaryButton renders the default 1`] = `
<button
  class="baseButton medium primary"
>
  <span
    class="text"
  >
    Default
  </span>
  <div
    class="rippleContainer"
  />
</button>
`;

exports[`PrimaryButton renders with icon 1`] = `
<button
  class="baseButton medium primary"
>
  <i
    aria-hidden="true"
    class="iconSpan"
  >
    <svg
      height="16"
      version="1.1"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        transform="scale(1)"
      >
        src/components/icons/assets/github.svg
      </g>
    </svg>
  </i>
  <span
    class="text withIcon"
  >
    Icon
  </span>
  <div
    class="rippleContainer"
  />
</button>
`;
